--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,33 +1,83 @@
-// body {
-//     margin: 0;
-//     height: 100vh;
-//     width: 100vw;
-//     max-height: 100vh;
-//     max-width: 100vw;
-// }
-body, html {
-    height: 100%;
-  }
+body,
+html {
+  height: 100%;
+  //   line-height: 1.5rem;
+}
 
 div.layout {
-    // width: 100vw;
-    // height: 100vh;
-    display: grid;
-    grid-template-columns: 1fr 2.5fr;
-    grid-template-rows: 100vh;
+  // width: 100vw;
+  // height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 2.5fr;
+  grid-template-rows: 100vh;
 }
 main {
-    display: flex;
-    justify-content: center;
-    // align-items: center;
-    height: 100%;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  // align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 div.carousel {
-    height: 70%;
-    width: 70%;
-    // img {
-    //     height: 90vh;
-    // }
+  height: 70%;
+  width: 70%;
+}
+
+p {
+  margin-bottom: 0;
+}
+
+header {
+  margin-bottom: 2rem;
+  font-size: 1.5rem;
+}
+
+#nav {
+  margin: 2rem;
+  .nav-links {
+    ul {
+      list-style-type: none;
+      li {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+div.scroll-gallery {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  div.image-wrapper {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-gap: 1rem;
+    margin: 2rem 2rem 2rem 0;
+    img {
+      margin-bottom: 0;
+      width: 100%;
+    }
+    .image-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+    }
+  }
+}
+
+div.rich-text {
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  padding: 2rem 2rem 2rem 0;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin-top: 1rem;
+  }
+
 }
