--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -66,6 +66,27 @@ div.scroll-gallery {
   }
 }
 
+div.home-gallery {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  div.image-wrapper {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-gap: 1rem;
+    margin: 2rem 2rem 2rem 0;
+    img {
+      margin-bottom: 0;
+      width: 100%;
+    }
+    .image-info {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+    }
+  }
+}
+
 div.rich-text {
   height: 100%;
   width: 100%;
