--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,27 +1,24 @@
 body,
 html {
   height: 100%;
-  //   line-height: 1.5rem;
 }
 
 div.layout {
-  // width: 100vw;
-  // height: 100vh;
   display: grid;
   grid-template-columns: 1fr 2.5fr;
   grid-template-rows: 100vh;
+  @include small {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+  }
 }
+
 main {
   display: flex;
   justify-content: center;
   // align-items: center;
   height: 100%;
   width: 100%;
-}
-
-div.carousel {
-  height: 70%;
-  width: 70%;
 }
 
 p {
@@ -35,6 +32,9 @@ header {
 
 #nav {
   margin: 2rem;
+  @include small {
+    margin: 1rem;
+  }
   .nav-links {
     ul {
       list-style-type: none;
@@ -43,25 +43,79 @@ header {
       }
     }
   }
+  @include small {
+    max-height: 10vh;
+  }
 }
 
 div.scroll-gallery {
-  width: 100%;
+  // width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+  display: flex; 
+  flex-direction: row;
+
   div.image-wrapper {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-gap: 1rem;
+    // display: grid;
+    // grid-template-columns: 3fr 1fr;
+    // grid-gap: 1rem;
     margin: 2rem 2rem 2rem 0;
+    height: 90%; 
+    width: auto;
+    display:flex;
+    flex-direction: row;
     img {
       margin-bottom: 0;
-      width: 100%;
+      // width: 100%;
+      width: auto;
+      height: 90vh;
     }
     .image-info {
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
+      min-width: 20vw;
+    }
+  }
+}
+
+div.single-image-gallery {
+  height: 90%;
+  @include small {
+    height: 75vh;
+  }
+  width: 100%;
+  margin: 2rem 2rem 2rem 0;
+  @include small {
+    margin: 1rem;
+    align-items: center;
+  }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  div.image-wrapper {
+    max-height: 90%; 
+    height: 100%;
+    @include small {
+      margin: auto;
+    }
+    width: auto;
+    display:flex;
+    flex-direction: row;
+    @include small {
+      padding-bottom: 1.5rem;
+    }
+    img {
+      margin-bottom: 0;
+      width: auto;
+      height: 100%;
+    }
+    .image-info {
+      display: none;
+      margin-left: 2rem;
+      min-width: 20%;
     }
   }
 }
@@ -69,20 +123,29 @@ div.scroll-gallery {
 div.home-gallery {
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow: hidden;
+  // display: flex;
+  // justify-content: center;
   div.image-wrapper {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-gap: 1rem;
+    display: flex;
+    // justify-content: center;
+
     margin: 2rem 2rem 2rem 0;
+    @include small {
+      margin: 1rem;
+      justify-content: center;
+    }
     img {
       margin-bottom: 0;
-      width: 100%;
+      width: 85%;
+      @include small {
+        width: 100%;
+      }
+      height: auto;
+
     }
     .image-info {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
+      display: none;
     }
   }
 }
@@ -100,5 +163,16 @@ div.rich-text {
   h6 {
     margin-top: 1rem;
   }
+}
+
+.image-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  @include small {
+    width: 50vw;
+    max-width: 50vw;
+  }
+  max-width: 15%;
 
 }
