--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-size: 11pt;
+  font-family: sans-serif;
+}
+
 body,
 html {
   height: 100%;
@@ -152,6 +162,7 @@ div.home-gallery {
 }
 
 div.rich-text {
+  font-family: sans-serif;
   height: 100%;
   width: 100%;
   overflow-y: scroll;
@@ -163,6 +174,15 @@ div.rich-text {
   h5,
   h6 {
     margin-top: 1rem;
+    margin-bottom: .5rem;
+    font-family: sans-serif;
+    font-weight: bold;
+  }
+  h3 {
+    font-size: 1.1rem;
+  }
+  p {
+    font-family: sans-serif;
   }
 }
 
