--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -120,9 +120,9 @@ div.single-image-gallery {
   display: grid;
   grid-template-columns: 2fr 0.75fr;
   grid-template-rows: 90vh;
-  &.no-text {
-    grid-template-columns: 1fr;
-  }
+  // &.no-text {
+  //   grid-template-columns: 1fr;
+  // }
   @include small {
     // height: 75vh;
     margin: 1rem;
@@ -149,8 +149,8 @@ div.single-image-gallery {
     width: auto;
     border: none;
     @include small {
-      height: auto;
-      max-height: 80%;
+      height: 75vh;
+      max-height: 75Vh;
       margin: auto;
       padding-bottom: 1.5rem;
     }
@@ -180,7 +180,7 @@ div.single-image-gallery {
         margin-left: 1rem;
         line-height: 1.2rem;
         min-width: 20%;
-        max-width: 35%;
+        max-width: 20%;
         z-index: 999;
         border: 1px dotted black;
         background-color: rgba(255, 255, 255, 0.7);
