--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -255,11 +255,11 @@ div.single-image-gallery div.rich-text {
     margin-bottom: 0.5rem;
   }
   @include small {
-    height: 100%;
-    max-height: 300%;
-    margin-top: 3rem;
-    padding-right: 0;
-    overflow: visible;
+    // height: 100%;
+    // max-height: 300%;
+    // margin-top: 3rem;
+    // padding-right: 0;
+    // overflow: visible;
   }
 }
 
