--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -260,6 +260,7 @@ div.single-image-gallery div.rich-text {
     // margin-top: 3rem;
     // padding-right: 0;
     // overflow: visible;
+    display: none;
   }
 }
 
