--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -116,9 +116,9 @@ div.scroll-gallery {
 div.single-image-gallery {
   height: 90%;
   width: 100%;
-  margin: 2rem 2rem 2rem 0;
+  // margin: 2rem 2rem 2rem 0;
   display: grid;
-  grid-template-columns: 2fr 0.75fr;
+  grid-template-columns: 2fr 1.5fr;
   grid-template-rows: 90vh;
   // &.no-text {
   //   grid-template-columns: 1fr;
@@ -141,16 +141,17 @@ div.single-image-gallery {
     }
   }
   div.image-wrapper {
-    max-height: 90%;
-    height: 90%;
+    // max-height: 90%;
+    // height: 90%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: auto;
+    // width: auto;
     border: none;
     @include small {
       height: 75vh;
-      max-height: 75Vh;
+      max-height: 75vh;
       margin: auto;
       padding-bottom: 1.5rem;
     }
@@ -171,8 +172,9 @@ div.single-image-gallery {
     &.loaded {
       img {
         margin-bottom: 0;
-        width: auto;
-        max-height: 100%;
+        // width: 80%;
+        max-height: 90%;
+        margin: auto;
         @include small {
           height: 60vh;
         }
@@ -183,7 +185,7 @@ div.single-image-gallery {
         margin-left: 1rem;
         line-height: 1.2rem;
         min-width: 20%;
-        max-width: 20%;
+        max-width: 75%;
         z-index: 999;
         border: 1px dotted black;
         background-color: rgba(255, 255, 255, 0.7);
@@ -192,7 +194,8 @@ div.single-image-gallery {
         bottom: 17%;
         visibility: hidden;
         &.show {
-          visibility: visible;
+          // visibility: visible;
+          visibility: hidden;
         }
         @include small {
           display: none;
@@ -207,10 +210,13 @@ div.home-gallery {
   height: 100%;
   overflow: hidden;
   div.image-wrapper {
-    display: flex;
-    justify-content: center;
-    margin: 2rem 2rem 2rem 0;
-    height: 90vh;
+    // display: flex;
+    // // flex-direction: column;
+    // justify-content: center;
+    margin: 2rem 2rem 2rem 2rem;
+    // height: 90vh;
+    width: auto;
+    height: 90%;
     @include small {
       margin: 1rem;
       justify-content: center;
@@ -238,9 +244,10 @@ div.home-gallery {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 25%;
-  width: 25%;
-  margin-top: 1rem;
+  // max-width: 25%;
+  // width: 25%;
+  padding: 0 7rem;
+  // margin-top: 1rem;
   @include small {
     width: 50vw;
     max-width: 50vw;
@@ -248,9 +255,14 @@ div.home-gallery {
 }
 
 div.single-image-gallery div.rich-text {
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
+  // padding-top: 0 !important;
+  // padding-bottom: 0 !important;
   height: 90%;
+  border: 1px dotted black;
+  margin: auto;
+  height: 80%;
+  width: 80%;
+  padding: 1rem;
   p {
     margin-bottom: 0.5rem;
   }
@@ -268,3 +280,8 @@ div.single-image-gallery div.rich-text {
 //   width: auto;
 //   height: 100%;
 // }
+
+div.carousel {
+  height: 400px;
+  width: 550px;
+}
