Remove border and box shadow on hover

--- a/src/styles/graham.scss
+++ b/src/styles/graham.scss
@@ -105,6 +105,11 @@ li:hover {
   }
 }
 
+div.carousel li:hover {
+  border: none;
+  box-shadow: none;
+}
+
 .content .cv {
   max-height: 100vh;
   display: flex;
