--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -169,7 +169,7 @@ div.single-image-gallery {
         width: 75%;
         height: 75%;
       }
-      border: 1px dotted black;
+      // border: 1px dotted black;
       img {
         display: none;
       }
