--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -31,7 +31,7 @@ main {
   width: 100%;
   @include small {
     height: auto;
-    width: 100vw;
+    width: 90vw;
   }
 }
 
@@ -143,8 +143,9 @@ div.single-image-gallery {
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
+    padding: 25px;
     @include small {
-      height: 85vh;
+      // height: 70vh;
       width: 100%;
     }
   }
@@ -158,7 +159,7 @@ div.single-image-gallery {
     // width: auto;
     border: none;
     @include small {
-      height: auto;
+      height: inherit;
       max-height: auto;
       margin: auto;
       padding-bottom: 1.5rem;
@@ -181,9 +182,12 @@ div.single-image-gallery {
       img {
         margin-bottom: 0;
         max-height: 90%;
-        margin: auto;
+        // margin: auto;
+        margin-right: auto;
+        margin-bottom: auto;
         @include small {
           max-height: 55vh;
+          margin: auto;
         }
         z-index: 0;
         position: relative;
@@ -192,20 +196,29 @@ div.single-image-gallery {
         margin-left: 1rem;
         line-height: 1.2rem;
         min-width: 20%;
-        max-width: 75%;
+        max-width: 60%;
         z-index: 999;
         border: 1px dotted black;
         background-color: rgba(255, 255, 255, 0.7);
         position: absolute;
         padding: 10px;
-        bottom: 17%;
+        // bottom: 10%;
+        // left: 10%;
+        top: 3%;
         visibility: hidden;
-        &.show {
-          // visibility: visible;
-          visibility: hidden;
-        }
         @include small {
-          display: none;
+          visibility: visible;
+          position: relative;
+          max-width: 80vh;
+          padding: 0;
+          top: 0;
+          border: none;
+          font-size: .8rem;
+          text-align: center;
+        }
+        &.show {
+          visibility: visible;
+          // visibility: hidden;
         }
       }
     }
@@ -251,13 +264,11 @@ div.home-gallery {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  // max-width: 25%;
-  // width: 25%;
-  padding: 0 7rem;
-  // margin-top: 1rem;
+  width: 50%;
   @include small {
     // width: 50vw;
-    max-width: 60vw;
+    // max-width: 60vw;
+    width: 90%;
     margin-top: 1rem;
     padding: 0;
     margin: auto;
@@ -302,6 +313,24 @@ div.carousel {
   height: 400px;
   width: 550px;
   @include small {
-    width: 100vw;
+    height: 550px;
+    width: 89vw;
+    margin: auto;
   }
+li {
+  @include small {
+    height: 70vh;
+  }
+}
+}
+
+.title {
+  font-style: italic;
+  font-weight: bold;
+
+}
+
+.year {
+  font-style: normal;
+  font-weight: normal;
 }
