--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -107,6 +107,7 @@ div.scroll-gallery {
       margin-bottom: 0;
       width: auto;
       height: 90vh;
+      padding: 3px;
     }
     .image-info {
       display: flex;
